Fix breaking on header menu on mobile

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -181,6 +181,7 @@ body
   top: 55px
   background: white
   width: 35%
+  min-width: 200px
   right: 0
   height: auto
   z-index: 999
@@ -542,3 +543,6 @@ body
 @media screen and (max-width: 780px)
   .hide-on-mobile
     display: none !important
+
+  .navigation-link
+    padding: .3em .4em !important
